# fastcomments-cpp

./: .gitignore  CMakeLists.txt  README.md  config.json  openapi.json  test.sh  update.sh
.github/workflows/: ci.yml
client/: CMakeLists.txt  README.md
client/.openapi-generator/: FILES
client/include/FastCommentsClient/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
client/src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
client/src/api/: DefaultApi.cpp  ModerationApi.cpp  PublicApi.cpp
client/src/model/: APIAuditLog.cpp  APIBanUserChangeLog.cpp  APIBanUserChangedValues.cpp  APIBannedUser.cpp  APIBannedUserWithMultiMatchInfo.cpp  APIComment.cpp  APICommentBase.cpp  APICommentBase_meta.cpp  APICommentCommonBannedUser.cpp  (+644 more)
docs/: README.md
docs/Apis/: DefaultApi.md
docs/Models/: APIComment.md  DeleteCommentPublic_200_response.md  GetAuditLogs_200_response.md  PublicAPIDeleteCommentResponse.md  PublicAPISetCommentTextResponse.md  SetCommentText_200_response.md
src/auth/: fc_account_auth.cpp
src/live/: live_stream.cpp
src/secret/: keyring_store_linux.cpp  keyring_store_macos.cpp  keyring_store_windows.cpp
src/sso/: fastcomments_sso.cpp  helpers.cpp  secure_sso_payload.cpp  secure_sso_user_data.cpp  simple_sso_user_data.cpp
tests/: CMakeLists.txt  auth_login_test.cpp  keyring_test.cpp  live_stream_test.cpp  sso_integration_test.cpp  sso_test.cpp
(+664 files in other folders)
